Thu Nov  1 19:47:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (RUBY_STACK_MIN): may not a compile time constant.
	  fix r37079.  [ruby-dev:46322] [Bug #7247]

Thu Nov  1 16:44:36 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: add note for Module#refine, Module#refinements,
	  Module#using, and Kernel#using.

Thu Nov  1 14:41:47 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_using_module): using should be used indirectly.
	  [ruby-dev:46326] [Feature #7251]

Wed Oct 31 18:17:38 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (gc_profile_record): don't define unused variables when
	  GC_PROFILE_MORE_DETAIL is 0.

Wed Oct 31 18:10:53 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (gc_prof_mark_timer_stop): count is not initialized.

Wed Oct 31 09:28:24 2012  Eric Hodel  <drbrain@segment7.net>

	* thread.c (rb_thread_call_without_gvl2):  Note that ubf() may or may
	  not be called with the GVL.  Hinted that rb_thread_call_with_gvl()
	  can be used to access ruby functionality.

Wed Oct 31 09:06:54 2012  Eric Hodel  <drbrain@segment7.net>

	* thread.c (rb_thread_call_without_gvl2):  Update documentation to
	  natural English.
	* thread.c (rb_thread_call_with_gvl):  ditto.

Wed Oct 31 02:53:07 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/dl/lib/dl/struct.rb: fix strange require order. [ruby-dev:45702]

	* ext/dl/lib/dl/value.rb: ditto

	* test/dl/test_c_struct_entry.rb: remove strange require order from
	  tests.

	* test/dl/test_c_union_entity.rb: ditto

Tue Oct 30 23:59:32 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refine): fix the error message when no block is
	  given.  [ruby-dev:46319] [Bug #7244]

	* test/ruby/test_refinement.rb: related test.

Tue Oct 30 19:27:48 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (redirect_dup2): set standard handles when new fd is stdio,
	  because if there is no allocated console at the moment Windows does